# ArduinoSensors

./: .gitignore  .gitmodules  README  asensors.code-workspace  check_holl_is_woking.ino  jdy40.ino  mqtt-frwd.ini  platformio.ini  rs485.cpp
ArduSens/: README  platformio.ini
ArduSens/include/: arduSensUtils.h  ardudev.h
ArduSens/src/: arduSens.cpp  arduSensUtils.cpp  rs232.cpp
ArduSensWL/: README  ardusenswl.sublime-workspace  platformio.ini
ArduSensWL/include/: arduSensUtils.h  ardudev.h
ArduSensWL/src/: arduSens.cpp  arduSensUtils.cpp  arduSensWL.cpp  jdy40.cpp  rs232.cpp
ArduWLdongle/: README  platformio.ini
ArduWLdongle/include/: jdy40.h
ArduWLdongle/src/: arduWLdongle.cpp  jdy40.cpp
ArduWater/: README.md  README.txt  platformio.ini
ArduWater/AnalogPressure/: AnalogPressure.ino
ArduWater/Blink-relay/: Blink-relay.ino
ArduWater/include/: arduSensUtils.h  ardudev.h
ArduWater/src/: arduSensUtils.cpp  arduWater.cpp
PajCandle/: PajCandle.ino  README.md
SetWaterClock/src/: setClock.cpp
mqtt/: .gitignore  README.md  alivedb.json  alivemqtt.py  check_device_online.py  detect-events-mqtt.py  jdy40-server.py  light.node-red  mqtt-forward@.service  mqtt-frwd.ini  mqtt-frwd.py  mymqtt.py  rc.local  reflect-domotizc.py  reflect-domotizc.service  reflect-mqtt.py  reflect-mqtt.service  shutdown.py  sunpos.py
mqtt-frwd/: mqtt-frwd.py  read_temp.py
mqttreflect/: .gitignore  CMakeLists.txt  config.hpp  mqtt-reflect.cpp  mqtt-suite.pro  mqttfrwd.json  mqttreflect.pro  serial.cpp
mqttreflect/com2mqtt/: CMakeLists.txt  README.md  boost-com-sample.cpp  com2mqtt.cpp  com2mqtt.hpp  com2mqtt.json  serial-demo.c  serial_loopback.cpp
mqttreflect/common/: .gitignore  CMakeLists.txt  cfg-test.cpp  common.pro  config.cpp  config.hpp  ini2json.py  rjson-traverse.cpp  serial-demo.c  serial.cpp  serial.hpp
mqttreflect/common/com-test/: CMakeLists.txt  serial_loopback.cpp
mqttreflect/mqtt-reflect/: CMakeLists.txt
mqttreflect/mqttreflect/: .gitignore  CMakeLists.txt  com-reader.cpp  json.hpp  mqtt-reflect.cpp  mqtt-reflect.hpp  mqttreflect.pro
mqttreflect/serial-test/: main.cpp  serial-test.pro
mqttreflect/test/: mqttfrwd.ini  testbench.py
src/: arduSens.cpp  arduWater.cpp
sserial485-rcv/: platformio.ini  sserial485-rcv.ino
sserial485-rcv/src/: sserial485-rcv.cpp
test1637/src/: main.cpp
